# betmasters

./: .geminiignore  .gitignore  Cargo.toml  README.md
.github/workflows/: gatekeeper  gatekeeper.yml
docker/: .env.example  docker-compose.yml
docs/: Agregar Dispositivo VPN.md  Configuracion Avanzada.md  Docker compose.md  Hub-and-Spoke.md  Instalacion de WireGuard.md  Virtual private network.md
rust/: Cargo.toml  Dockerfile
rust/core/: Cargo.toml
rust/core/src/: coordinator.rs  coordinator_v1.rs  logger.rs  main.rs  worker.rs
rust/src/: coordinator.rs  core.rs  lib.rs  logger.rs  main.rs  worker.rs
rust/src/coordinator/: handlers.rs  logic.rs  types.rs
rust/src/worker/: logic.rs  math.rs  types.rs
