[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["json", "ws"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
image = { version = "0.25", default-features = false, features = ["png"] }
