[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
clap = { version = "4.5.30", features = ["derive"] }
num-traits = "0.2.19"
num-complex = "0.4.6"
rayon = { version = "1.11.0", optional = true }

[features]
rayon = ["dep:rayon"]
